# memoria-cursor

./: .gitignore  LICENSE  MANIFEST.in  MEMORIA.md  Makefile  README.md  pyproject.toml  setup.py
config/: config.json
docs/: README-LLM.md  api-python.md  ejemplos.md  guia-uso.md  llm-guide.md  llm-templates.md  reglas-agentes-llm.md
memoria_cursor/: __init__.py  cli.py
memoria_cursor/config/: __init__.py  config.json  schema.json
memoria_cursor/core/: __init__.py  entry.py  git_integration.py  memory_system.py
memoria_cursor/templates/: __init__.py  entry_templates.py
memoria_cursor/tools/: __init__.py  create.py  export.py  list.py
tests/: __init__.py  test_cli_export.py  test_entry.py  test_exporter.py
